Service & cloche de notification

--- a/Mediconnet-Frontend/src/app/shared/components/header/header.component.html
+++ b/Mediconnet-Frontend/src/app/shared/components/header/header.component.html
@@ -10,6 +10,9 @@
   </div>
   
   <div class="header-right">
+    <!-- Cloche de notifications -->
+    <app-notification-bell></app-notification-bell>
+    
     <!-- Menu utilisateur avec dropdown -->
     <div class="user-menu">
       <button class="user-menu-trigger" (click)="toggleDropdown()">
